feat(rift-embedded): publishable embedded provider on stable FFM (JDK 22+)
The embedded Rift provider used the Foreign Function & Memory API in its JDK-21
preview form (--enable-preview), which produces version-locked class files that
load ONLY on JDK 21 and fail on JDK 22+. That made it unpublishable — a preview
jar on Maven Central would be a trap. Port it to the stable FFM API (JEP 454,
finalized in JDK 22) so the artifact runs on JDK 22, 23, 24, 25-LTS and up with
just --enable-native-access.

- Port RiftFfiBridge to stable FFM: allocateUtf8String -> allocateFrom,
  getUtf8String -> getString; compile with --release 22 (no --enable-preview).
  The class is a normal JDK-22 class (major 66), not version-locked.
- Extract the embedded sources from `rift` into a new `zio-bdd-rift-embedded`
  module (rift-embedded/), published separately. This keeps `zio-bdd-rift` and
  core on the JDK-11 baseline: the container adapter jar carries no FFM/JDK-22
  classes (verified: no embedded classes in the rift jar). Only consumers who
  opt into embedded take on the JDK-22 requirement.
- Raise the embedded build floor to JDK 22 (ffmEnabled = jdkMajor >= 22). On a
  < 22 JDK the embedded module + its natives are not aggregated, so the default
  build and the JDK-11 stack are unaffected.
- CI: the embedded job runs on JDK 22 (validating the minimum), stable FFM needs
  no --enable-preview. Release builds on JDK 22 so it aggregates + publishes
  zio-bdd-rift-embedded and zio-bdd-rift-embedded-natives alongside the JDK-11
  stack (scalac emits Java 8 bytecode regardless of build JDK, and the JDK-11 CI
  build guards API compatibility).

Consumers of the embedded provider add both zio-bdd-rift-embedded and
zio-bdd-rift-embedded-natives, run JDK 22+ with --enable-native-access, and need
LuaJIT present (librift_ffi links it). The container adapter, WireMock and core
are unchanged and stay JDK 8+/11.

Verified: JDK 21 container baseline green (rift jar embedded-free); JDK 25 full
build +